@@ -5,7 +5,8 @@ CHANGES
 2.0.0a2 (unreleased)
 --------------------
 
-- Nothing changed yet.
+- Make sure the of the templates content type is a native string instead
+  forced bytes.
 
 
 2.0.0a1 (2013-02-22)
